--- a/backend/BusinessLogic/BusinessLogic.csproj
+++ b/backend/BusinessLogic/BusinessLogic.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
+    <ProjectReference Include="..\ETL\ETL.csproj" />
+  </ItemGroup>
+
 </Project>
